fix: 텍스트 파일 읽을 시 인코딩 깨지는 문제 해결